[#130526475] Questions now can have a code which is necessary when using the profile set import.

--- a/config/database.yml
+++ b/config/database.yml
@@ -11,6 +11,7 @@ default: &default
 
 development:
   <<: *default
+  user: tcesere
   database: wrapt_gratitude_development
 
 # Warning: The database defined as "test" will be erased and
