--- a/.env.test
+++ b/.env.test
@@ -1,3 +1,6 @@
 LIVERELOAD=1
 AWS_ACCESS_KEY_ID=AKIAJ2WPKFTBTB5PT72Q
 AWS_SECRET_ACCESS_KEY=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
+export SHIPPO_TOKEN=shippo_test_053fc1790bfa4b94fa76b706b9ce85982da3b9fe
+export STRIPE_SECRET_KEY=sk_test_uGCJUoqPMM0C6BbRSnMjq2gQ
+export STRIPE_PUBLISHABLE_KEY=pk_test_cQXTmpKA3pI3FPFvT7kOwmPv
