[#151332391] SSL Support. Production ready in the comments

--- a/config/letsencrypt_plugin.yml
+++ b/config/letsencrypt_plugin.yml
@@ -33,7 +33,7 @@ staging:
 production:
   <<: *default
   cert_name: 'production'
-  domain: "wrapt.com www.wrapt.com"
+  domain: "wrapt.com www.wrapt.com wrapt.greenriver.com wrapt.us www.wrapt.us"
 
 development:
   cert_name: 'development'
