--- a/.env.test
+++ b/.env.test
@@ -4,3 +4,6 @@ AWS_SECRET_ACCESS_KEY=bZhVG7YlshJH5C49+8PRT7iT5HZR2X2yoUOHgthM
 export SHIPPO_TOKEN=shippo_test_053fc1790bfa4b94fa76b706b9ce85982da3b9fe
 export STRIPE_SECRET_KEY=sk_test_uGCJUoqPMM0C6BbRSnMjq2gQ
 export STRIPE_PUBLISHABLE_KEY=pk_test_cQXTmpKA3pI3FPFvT7kOwmPv
+export AVATAX_ENDPOINT=https://sandbox-rest.avatax.com
+export AVATAX_USERNAME=tblackman@greenriver.com
+export AVATAX_PASSWORD='YCK4l#CPd*ubC8zIhC29'
