--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,14 +1,14 @@
 development:
   adapter: redis
-  url: redis://localhost:6379/1
+  url: <%= ENV.fetch('REDIS_URL') { 'redis://localhost:6379/1' } %>
 
 test:
   adapter: async
 
 production:
   adapter: redis
-  url: redis://localhost:6379/1
+  url: <%= ENV.fetch('REDIS_URL') { 'redis://localhost:6379/1' } %>
 
 staging:
   adapter: redis
-  url: redis://localhost:6379/2
+  url: <%= ENV.fetch('REDIS_URL') { 'redis://localhost:6379/2' } %>
